haste-server-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haste-server-space
  labels:
    app: haste-server
