haste-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haste-server-service
  namespace: haste-server-space
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7777
  selector:
    app: haste-server
    name: haste-server-pod
