redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: haste-server-space
spec:
  selector:
    name: redis-pod
    app: haste-server
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP
