haste-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haste-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
  namespace: haste-server-space
spec:
  tls:
    - hosts:
        - haste.karlman.net
      secretName: haste-tls
  rules:
    - host: haste.karlman.net
      http:
        paths:
          - backend:
              serviceName: haste-server-service
              servicePort: 80
            path: /
